discussion/kv_engine/155741/155741_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor: CheckPrivilegeFunction & ServerCookieIface

Replace gsl::not_null<> with ref to the type

This patch was created following these steps:
1. Use CLion's refactor signature functionality for each method in
ServerCookieIface.
2. Update CheckPrivilegeFunction
3. Add/remove derefs or refs where needed, found by compiling the source
code.
4. Update some methods of casting from CookieIface* to Cookie or
MockCookie.

Change-Id: I50bb6b07e5e708ecd917c3aa4f9082e5fce93620

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-06-14 14:27:01.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-14 14:46:24.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9868/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/stats.def.h:131:10: error: "stats_config.def.h" file not found [clang-diagnostic-error]
#include "stats_config.def.h" // NOLINT(*)
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/logger.h:28:10: error: "spdlog/fmt/ostr.h" file not found [clang-diagnostic-error]
#include <spdlog/fmt/ostr.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9868/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9868/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19454/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19454/ )

Undefined Sanitizer: home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/objectregistry.cc:119:49: runtime error: member call on address 0x61d00000e680 which does not point to an object of type "EventuallyPersistentEngine" ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19454/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8458/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36861/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/378/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31490/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10520/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11439/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11592/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11865/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-15 09:31:33.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19454/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19454/ )

Undefined Sanitizer: home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/objectregistry.cc:119:49: runtime error: member call on address 0x61d00000e680 which does not point to an object of type "EventuallyPersistentEngine" ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19454/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8458/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36861/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/378/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31490/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10520/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11439/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11592/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11865/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9888/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-15 12:29:01.000000000
Message: 
Patch Set 1: Verified+1

Build Successful 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8458/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36861/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/378/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31490/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9888/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10520/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11439/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11592/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11865/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19484/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
